adjusting the left-side spacing of all the content so it all lines up correctly

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -194,7 +194,7 @@
     font-weight: bold;
     background-color: #e1e1e1;
     padding: 0 .5em;
-    margin: .75em 0;
+    margin: .75em .5em;
 }
 /*
 .content ul  {
