--- a/css/post.css
+++ b/css/post.css
@@ -5,7 +5,7 @@
     font-size: 2.5rem;
     color: black;
     margin-top: 1.25rem;
-    margin-left:.5em;
+    margin-left: 0;
 }
 
 .menu_title_dataset {
